# alfan-gerak-tari

./: .gitmodules  CMakeLists copy.txt  CMakeLists.txt  README.md  package.xml
include/alfan_gerak_tari/: globals.h
include/alfan_gerak_tari/core/: communication.h  gerak_tari.h  kaki.h  kepala.h  kinematika.h  perut.h  servo_manager.h  tangan.h
include/alfan_gerak_tari/io/: file_manager.h  yaml_utils.h
include/alfan_gerak_tari/record/: rekam_gerak.h
include/alfan_gerak_tari/utils/: convert_utils.h  terminal_helper.h
include/program_rekam_gerak/: communication.h  communication_manager.h  gerak_tari.h  lib_alfan.h  rekam_gerak.h  tangan_controller.h
install/: local_setup.sh  setup.sh
install/program_tangan_alfan/include/program_rekam_gerak/: gerak_tari.h  tangan_controller.h
install/program_tangan_alfan/lib/cmake/c4core/: c4coreTargets-noconfig.cmake  c4coreTargets.cmake
install/program_tangan_alfan/lib/cmake/ryml/: rymlTargets-noconfig.cmake
install/program_tangan_alfan/lib/program_tangan_alfan/: rekam_gerak  tangan_driver
install/program_tangan_alfan/share/program_tangan_alfan/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/program_tangan_alfan/share/program_tangan_alfan/cmake/: ament_cmake_export_include_directories-extras.cmake
log/: latest_build
src/: VAR_KIRI.yaml  communication.cpp  communication_manager.cpp  custom_default_pose.yaml  driver_gerak_tari.cpp  driver_rekam_gerak.cpp  fortune_cookie.yaml  gerak_tari.cpp  gerak_tari.yaml  globals.cpp  lib_alfan.cpp  rekam_gerak.cpp  rekam_gerak_noros.cpp  tangan_controller.cpp  tangan_driver.cpp
src/Result/json/: GRK0.json  GRK1.json  GRK100.json  GRK101.json  GRK102.json  GRK103.json  GRK104.json  GRK105.json  GRK106.json  GRK107.json  GRK108.json  GRK109.json  GRK110.json  GRK111.json  GRK112.json  GRK113.json  GRK114.json  GRK115.json  GRK116.json  GRK117.json  GRK118.json  GRK119.json  GRK120.json  GRK121.json  GRK122.json  GRK123.json  GRK124.json  GRK125.json  GRK126.json  GRK127.json  GRK128.json  GRK129.json  GRK130.json  GRK131.json  GRK132.json  GRK133.json  GRK134.json  GRK135.json  GRK136.json  GRK137.json  (+86 more)
src/Result/txt/: GRK0.txt  GRK101.txt  GRK102.txt  GRK104.txt  GRK106.txt  GRK107.txt  GRK108.txt  GRK109.txt  GRK110.txt  GRK111.txt  GRK112.txt  GRK116.txt  GRK117.txt  GRK118.txt  GRK119.txt  GRK12.txt  GRK120.txt  GRK122.txt  GRK123.txt  GRK124.txt  GRK125.txt  GRK126.txt  GRK128.txt  GRK129.txt  GRK133.txt  GRK135.txt  GRK137.txt  GRK138.txt  GRK140.txt  GRK142.txt  GRK144.txt  GRK145.txt  GRK149.txt  GRK151.txt  GRK153.txt  GRK156.txt  GRK16.txt  GRK18.txt  GRK19.txt  GRK190.txt  (+58 more)
src/Result/txt/Semarangan 2023/: CMN124.txt  GRK1.txt  GRK10.txt  GRK100.txt  GRK101.txt  GRK102.txt  GRK103.txt  GRK104.txt  GRK105.txt  GRK106.txt  GRK108.txt  GRK109.txt  GRK11.txt  GRK110.txt  GRK111.txt  GRK112.txt  GRK113.txt  GRK114.txt  GRK115.txt  GRK116.txt  GRK117.txt  GRK119.txt  GRK12.txt  GRK120.txt  GRK121.txt  GRK122.txt  GRK123.txt  GRK124.txt  GRK125.txt  GRK126.txt  GRK127.txt  GRK128.txt  GRK129.txt  GRK13.txt  GRK130.txt  GRK131.txt  GRK132.txt  GRK133.txt  GRK134.txt  GRK135.txt  (+1154 more)
src/Result/txt/Tiktok 27-02-2025/: GRK1.txt  GRK100.txt  GRK103.txt  GRK105.txt  GRK113.txt  GRK114.txt  GRK115.txt  GRK121.txt  GRK127.txt  GRK13.txt  GRK130.txt  GRK131.txt  GRK132.txt  GRK134.txt  GRK136.txt  GRK139.txt  GRK14.txt  GRK141.txt  GRK143.txt  GRK146.txt  GRK147.txt  GRK148.txt  GRK15.txt  GRK150.txt  GRK152.txt  GRK154.txt  GRK155.txt  GRK157.txt  GRK158.txt  GRK159.txt  GRK17.txt  GRK2.txt  GRK20.txt  GRK22.txt  GRK27.txt  GRK28.txt  GRK3.txt  GRK31.txt  GRK4.txt  GRK42.txt  (+24 more)
src/Result/txt/fortune cookie/: GRK0.txt  GRK1.txt  GRK10.txt  GRK100.txt  GRK101.txt  GRK102.txt  GRK103.txt  GRK104.txt  GRK105.txt  GRK106.txt  GRK107.txt  GRK108.txt  GRK109.txt  GRK11.txt  GRK110.txt  GRK111.txt  GRK112.txt  GRK113.txt  GRK114.txt  GRK115.txt  GRK116.txt  GRK117.txt  GRK118.txt  GRK119.txt  GRK12.txt  GRK120.txt  GRK121.txt  GRK122.txt  GRK123.txt  GRK124.txt  GRK125.txt  GRK126.txt  GRK127.txt  GRK128.txt  GRK129.txt  GRK13.txt  GRK130.txt  GRK131.txt  GRK132.txt  GRK133.txt  (+500 more)
src/Result/txt/rec/: GRK15.txt
src/Result/txt/say hi/: GRK0.txt  GRK1.txt  GRK2.txt  GRK3.txt  GRK4.txt  GRK5.txt  GRK6.txt  GRK7.txt  GRK8.txt
src/Result/txt/say hi v2/: GRK0.txt  GRK1.txt  GRK2.txt  GRK3.txt  GRK4.txt  GRK5.txt  GRK6.txt  GRK7.txt
src/config_tari/: denok_semarangan.yaml  fortune_cookie.yaml  rec.yaml  say_hi.yaml  say_hi_v2.yaml
src/core/: communication.cpp  gerak_tari.cpp  kaki.cpp  kepala.cpp  kinematika.cpp  perut.cpp  servo_manager.cpp  tangan.cpp
src/io/: file_manager.cpp  yaml_utils.cpp
src/record/: rekam_gerak.cpp
src/utils/: terminal_helper.cpp
